# aida

./: Makefile  README.md  main.py  pyproject.toml  transactions.db
aida/: config.py
aida/finance/: models.py  schemas.py  service.py
