[tool.poetry]
name = "aida"
version = "0.1.0"
description = ""
authors = ["Vugar Abdulaliyev <vabdulaliyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"
groq = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
